Code Refactoring and Documentation: 8

--- a/templates/batch_list.html
+++ b/templates/batch_list.html
@@ -39,7 +39,7 @@
 </div >
 
 <div class="row mb10">
-    <a ui-sref="batch"><button class="btn btn-primary btn-lg pull-right">Add Batch</button></a>
+    <a ui-sref="main.batch"><button class="btn btn-primary btn-lg pull-right">Add Batch</button></a>
 </div>
 
 <div class="row">
