--- a/templates/mock_test_list.html
+++ b/templates/mock_test_list.html
@@ -42,7 +42,7 @@
                     <td>{{ Enums.MOCK_TEST_DIFFICULTY_LEVEL[mock_test.difficulty] }}</td>
                     <td>{{ mock_test.batches_str }}</td>
                     <td class="table-action">
-                        <a ui-sref="mock_test({id: mock_test.id, target_exam: mock_test.target_exam})"><button class="btn btn-primary">Push</button></a>
+                        <a ui-sref="main.mock_test({id: mock_test.id, target_exam: mock_test.target_exam})"><button class="btn btn-primary">Push</button></a>
                     </td>
                 </tr>
                 </tbody>
