--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -74,7 +74,7 @@
                     <td>{{ student.target_year }}</td>
                     <td>{{ student.target_exams_str }}</td>
                     <td class="table-action">
-                        <a ui-sref="student({id: student.id})"><button class="btn btn-warning">Edit</button></a>
+                        <a ui-sref="main.student({id: student.id})"><button class="btn btn-warning">Edit</button></a>
                     </td>
                     <td class="table-action">
                         <a ui-sref="student_profile({id: student.id})"><button class="btn btn-primary">View Profile</button></a>
